--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -31,6 +31,7 @@ repositories {
 dependencies {
     compile project(':library')
     compile(name:'library-all-release', ext:'aar')
+    compile 'com.jakewharton.timber:timber:3.1.0'
 //    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:+@aar'
     compile 'com.android.support:support-v4:21.+'
 }
