滤镜1.0，仍需优化yuv --> rgb

--- a/sample/project.properties
+++ b/sample/project.properties
@@ -14,3 +14,5 @@
 target=android-16
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 android.library.reference.1=../library
+
+#gradlew.bat --offline library:assembleAll sample:installDebug sample:run
