--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,6 +6,7 @@ model {
         buildToolsVersion = "23.0.0"
 
         defaultConfig.with {
+            applicationId =  "yyyyyyy.example.user.myapplication"
             minSdkVersion.apiLevel = 15
             targetSdkVersion.apiLevel = 23
         }
@@ -14,6 +15,14 @@ model {
     compileOptions.with {
         sourceCompatibility = JavaVersion.VERSION_1_7
         targetCompatibility = JavaVersion.VERSION_1_7
+    }
+
+    android.buildTypes {
+        debug {
+            debuggable = true
+            minifyEnabled = false
+            proguardFiles.add(file("proguard-rules.pro"))
+        }
     }
 
     android.lintOptions {
